welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:5: error: '(' expected but identifier found.
			if i>1 {
                           ^